@@ -5,6 +5,7 @@
 * Fix - Resolved an issue that would cause subscriptions to be directly cancelled by the WooCommerce process of automatically cancelling unpaid orders in-line with the hold stock setting.
 * Fix - Prevent duplicate status transition notes on subscriptions and potential infinite loops when processing subscription status transitions.
 * Fix - Resolved an issue that could lead to "Undefined array key 'order-received'" errors.
+* Fix - Resolved errors that could occur when paying for renewal orders via the checkout when the store has custom checkout fields.
 * Fix - Resolved database errors that would occur when ordering the subscriptions list table by the 'Last order date' on sites with HPOS enabled.
 * Dev - Introduced a new filter ('wcs_setup_cart_for_subscription_initial_payment') to enable third-party plugins to use the pay-for-order flow to complete a subscription's initial payment.
 
